Java 9: Replace 'new Double' with 'Double.valueOf'